fix: align content on the page

--- a/async-race/src/app.css
+++ b/async-race/src/app.css
@@ -10,7 +10,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 .main {
   width: 100%;
